# docxedit

./: CHANGELOG.md  CHANGELOG.txt  README.md  __init__.py  docx-edit.py  docxedit.py  pyproject.toml  setup.py
.github/workflows/: release-please.yml  release-to-pypi.yml
